--- a/gb/7/6/17/n1746745.md
+++ b/gb/7/6/17/n1746745.md
@@ -1,12 +1,13 @@
 <a name="1" id="1" target="_blank"></a><span id="1"></span>
-<table align=center border="0"><tr><td colspan="2" VALIGN=TOP><a href="https://github.com/pybnyd3634/djy/blob/master/gb/nf1351518.md#1"><img src="https://raw.githubusercontent.com/pybnyd3634/www/master/t/djy/1.jpg" title="大纪元首页" alt="大纪元首页"></a><a href="https://github.com/pybnyd3634/djy/blob/master/gb/n24hr.md#1"><img src="https://raw.githubusercontent.com/pybnyd3634/www/master/t/djy/3.jpg" title="国际新闻" alt="国际新闻"></a><a href="https://github.com/pybnyd3634/djy/blob/master/gb/nsc413.md#1"><img src="https://raw.githubusercontent.com/pybnyd3634/www/master/t/djy/4.jpg" title="大陆新闻" alt="大陆新闻"></a><a href="https://github.com/pybnyd3634/djy/blob/master/gb/news392.md#1"><img src="https://raw.githubusercontent.com/pybnyd3634/www/master/t/djy/5.jpg" title="大纪元评论" alt="大纪元评论"></a><a href="https://github.com/pybnyd3634/djy/blob/master/gb/news2007.md#1"><img src="https://raw.githubusercontent.com/pybnyd3634/www/master/t/djy/6.jpg" title="传统文化" alt="传统文化"></a><a href="https://github.com/pybnyd3634/djy/blob/master/gb/news2008.md#1"><img src="https://raw.githubusercontent.com/pybnyd3634/www/master/t/djy/7.jpg" title="生活消费" alt="生活消费"></a><a href="https://github.com/pybnyd3634/djy/blob/master/gb/ncyule.md#1"><img src="https://raw.githubusercontent.com/pybnyd3634/www/master/t/djy/8.jpg" title="娱乐休闲" alt="娱乐休闲"></a><a href="https://github.com/pybnyd3634/djy/blob/master/gb/nsc1002.md#1"><img src="https://raw.githubusercontent.com/pybnyd3634/www/master/t/djy/9.jpg" title="健康" alt="健康"></a><a href="https://github.com/pybnyd3634/djy/blob/master/gb/nf6092.md#1"><img src="https://raw.githubusercontent.com/pybnyd3634/www/master/t/djy/10a.jpg" title="独家" alt="独家"></a><a href="https://github.com/pybnyd3634/djy/blob/master/gb/nf4514.md#1"><img src="https://raw.githubusercontent.com/pybnyd3634/www/master/t/djy/12a.jpg" title="头条要闻" alt="头条要闻"></a></td></tr>
-<tr><td colspan="2" VALIGN=TOP><a target="_blank" href="https://github.com/pybnyd3634/www/blob/master/README.md?zsrh#1">翻墙</a> | <a target="_blank" href="https://github.com/pybnyd3634/djy/blob/master/gb/nf5657.md#1">三退</a> | <a target="_blank" href="https://github.com/pybnyd3634/djy/blob/master/gb/nf6124.md#1">诉江</a> | <a target="_blank" href="https://github.com/pybnyd3634/djy/blob/master/gb/nf1176117.md#1">中共卖国</a> | <a target="_blank" href="https://github.com/pybnyd3634/djy/blob/master/gb/nf5773.md#1">贪腐淫乱</a> | <a target="_blank" href="https://github.com/pybnyd3634/djy/blob/master/gb/nf1176115.md#1">窜改历史</a> | <a target="_blank" href="https://github.com/pybnyd3634/djy/blob/master/gb/nf1176107.md#1">党魁画皮</a> | <a target="_blank" href="https://github.com/pybnyd3634/djy/blob/master/gb/nf1320400.md#1">中共间谍</a> | <a target="_blank" href="https://github.com/pybnyd3634/djy/blob/master/gb/nf1176114.md#1">破坏传统</a> | <a target="_blank" href="https://github.com/pybnyd3634/ntdtv/blob/master/gb/prog447_1.md#1">恶贯满盈</a> | <a target="_blank" href="https://github.com/pybnyd3634/djy/blob/master/gb/ncid278.md#1">人权</a> | <a target="_blank" href="https://github.com/pybnyd3634/djy/blob/master/gb/nf1176111.md#1">迫害</a> | <a target="_blank" href="https://gitlab.com/szzdlab/mh-qikan/blob/master/README.md#1">期刊</a> | <a target="_blank" href="https://github.com/pybnyd3634/djy/blob/master/gb/nf5562.md#1">伪火</a></p><p><a target="_blank" href="https://github.com/pybnyd3634/djy/blob/master/gb/9p.md#1">社论</a> | <a target="_blank" href="https://github.com/pybnyd3634/djy/blob/master/gb/nf4378.md#1">问答</a> | <a target="_blank" href="https://github.com/pybnyd3634/djy/blob/master/gb/nf5792.md#1">剖析</a> | <a target="_blank" href="https://github.com/pybnyd3634/djy/blob/master/gb/nf5735.md#1">两岸比对</a> | <a target="_blank" href="https://github.com/pybnyd3634/djy/blob/master/gb/nf6119.md#1">各国褒奖</a> | <a target="_blank" href="https://github.com/pybnyd3634/djy/blob/master/gb/nf6120.md#1">民众声援</a> | <a target="_blank" href="https://github.com/pybnyd3634/djy/blob/master/gb/nf1188594.md#1">难忘记忆</a> | <a target="_blank" href="https://github.com/pybnyd3634/djy/blob/master/gb/nf3180.md#1">海外弘传</a> | <a target="_blank" href="https://github.com/pybnyd3634/djy/blob/master/gb/nf5410.md#1">万人上访</a> | <a target="_blank" href="https://github.com/pybnyd3634/www/blob/master/README.md?zsrh#1">平台首页</a> | <a target="_blank" href="https://github.com/pybnyd3634/djy/blob/master/gb/nf4386.md#1">支持</a> | <a target="_blank" href="https://github.com/pybnyd3634/djy/blob/master/gb/nf4389.md#1">真相</a> | <a target="_blank" href="https://github.com/pybnyd3634/djy/blob/master/gb/nf5790.md#1">圣缘</a> | <a target="_blank" href="https://github.com/pybnyd3634/djy/blob/master/gb/nf4786.md#1">神韵</a></td></tr>
+<table align=center border="0"><tr><td colspan="2" VALIGN=TOP><a href="https://github.com/eizauy3553/djy/blob/master/gb/nf1351518.md#1"><img src="https://raw.githubusercontent.com/eizauy3553/www/master/t/djy/1.jpg" title="大纪元首页" alt="大纪元首页"></a><a href="https://github.com/eizauy3553/djy/blob/master/gb/n24hr.md#1"><img src="https://raw.githubusercontent.com/eizauy3553/www/master/t/djy/3.jpg" title="国际新闻" alt="国际新闻"></a><a href="https://github.com/eizauy3553/djy/blob/master/gb/nsc413.md#1"><img src="https://raw.githubusercontent.com/eizauy3553/www/master/t/djy/4.jpg" title="大陆新闻" alt="大陆新闻"></a><a href="https://github.com/eizauy3553/djy/blob/master/gb/news392.md#1"><img src="https://raw.githubusercontent.com/eizauy3553/www/master/t/djy/5.jpg" title="大纪元评论" alt="大纪元评论"></a><a href="https://github.com/eizauy3553/djy/blob/master/gb/news2007.md#1"><img src="https://raw.githubusercontent.com/eizauy3553/www/master/t/djy/6.jpg" title="传统文化" alt="传统文化"></a><a href="https://github.com/eizauy3553/djy/blob/master/gb/news2008.md#1"><img src="https://raw.githubusercontent.com/eizauy3553/www/master/t/djy/7.jpg" title="生活消费" alt="生活消费"></a><a href="https://github.com/eizauy3553/djy/blob/master/gb/ncyule.md#1"><img src="https://raw.githubusercontent.com/eizauy3553/www/master/t/djy/8.jpg" title="娱乐休闲" alt="娱乐休闲"></a><a href="https://github.com/eizauy3553/djy/blob/master/gb/nsc1002.md#1"><img src="https://raw.githubusercontent.com/eizauy3553/www/master/t/djy/9.jpg" title="健康" alt="健康"></a><a href="https://github.com/eizauy3553/djy/blob/master/gb/nf6092.md#1"><img src="https://raw.githubusercontent.com/eizauy3553/www/master/t/djy/10a.jpg" title="独家" alt="独家"></a><a href="https://github.com/eizauy3553/djy/blob/master/gb/nf4514.md#1"><img src="https://raw.githubusercontent.com/eizauy3553/www/master/t/djy/12a.jpg" title="头条要闻" alt="头条要闻"></a></td></tr>
+<tr><td colspan="2" VALIGN=TOP><a target="_blank" href="https://github.com/eizauy3553/www/blob/master/README.md?zsrh#1">翻墙</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf5657.md#1">三退</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf6124.md#1">诉江</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf1176117.md#1">中共卖国</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf5773.md#1">贪腐淫乱</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf1176115.md#1">窜改历史</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf1176107.md#1">党魁画皮</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf1320400.md#1">中共间谍</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf1176114.md#1">破坏传统</a> | <a target="_blank" href="https://github.com/eizauy3553/ntdtv/blob/master/gb/prog447_1.md#1">恶贯满盈</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/ncid278.md#1">人权</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf1176111.md#1">迫害</a> | <a target="_blank" href="https://gitlab.com/szzdlab/mh-qikan/blob/master/README.md#1">期刊</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf5562.md#1">伪火</a></p><p><a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/9p.md#1">社论</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf4378.md#1">问答</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf5792.md#1">剖析</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf5735.md#1">两岸比对</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf6119.md#1">各国褒奖</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf6120.md#1">民众声援</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf1188594.md#1">难忘记忆</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf3180.md#1">海外弘传</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf5410.md#1">万人上访</a> | <a target="_blank" href="https://github.com/eizauy3553/www/blob/master/README.md?zsrh#1">平台首页</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf4386.md#1">支持</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf4389.md#1">真相</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf5790.md#1">圣缘</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf4786.md#1">神韵</a></td></tr>
 <tr><td VALIGN=TOP width="626"><h2 align=center>烧烤或烟熏增乳癌风险 如何烧烤最合适</h2>
-
-<h6></h6>
+<img width="600" src="https://i.epochtimes.com/assets/uploads/2007/06/706170113511093-396x594.jpg" />
+<h6>烧烤已成美国人家庭亲友聚会不可或缺的环节。(Rusty Jarrett/Getty Images)
+</h6>
 <hr>
-<p>【大纪元6月17日讯】(大纪元记者周奕伦、安琪综合编译报导) 第一份有关一生中对肉类的食用和罹患<ahref="https://github.com/pybnyd3634/djy/blob/master/gb/tag/%E4%B9%B3%E7%99%8C.md#1">乳癌</a>概率的研究报告指出，停经妇女的一生中，假如她以往的饮食习惯偏重<ahref="https://github.com/pybnyd3634/djy/blob/master/gb/tag/%E7%83%A7%E7%83%A4.md#1">烧烤</a>或是烟熏红肉，其罹患乳癌的风险增加47%。而对于只吃肉并未适量摄取蔬果者，则有74%的概率得此癌症。</p>
-<p>在1508名罹患<ahref="https://github.com/pybnyd3634/djy/blob/master/gb/tag/%E4%B9%B3%E7%99%8C.md#1">乳癌</a>的妇女和1556名健康的妇女中，南卡罗来纳大学(University of South Carolina)的苏珊?斯特克 (Susan E. Steck) 博士和同事比较这些妇女过去和最近对肉类食用的多寡。结果发现停经妇女在过去三分之二的岁月中，食用烟熏红肉或<ahref="https://github.com/pybnyd3634/djy/blob/master/gb/tag/%E7%83%A7%E7%83%A4.md#1">烧烤</a>红肉每周超过一次者比起每周一次以下的人罹患乳癌概率增加47%。再者，食用大量的烧烤或烟熏肉品而甚少食用水果和蔬菜，比如每天不到五份（five servings)，的妇女罹患乳癌的风险会增加到74%。</p>
+<p>【大纪元6月17日讯】(大纪元记者周奕伦、安琪综合编译报导) 第一份有关一生中对肉类的食用和罹患<ahref="https://github.com/eizauy3553/djy/blob/master/gb/tag/%E4%B9%B3%E7%99%8C.md#1">乳癌</a>概率的研究报告指出，停经妇女的一生中，假如她以往的饮食习惯偏重<ahref="https://github.com/eizauy3553/djy/blob/master/gb/tag/%E7%83%A7%E7%83%A4.md#1">烧烤</a>或是烟熏红肉，其罹患乳癌的风险增加47%。而对于只吃肉并未适量摄取蔬果者，则有74%的概率得此癌症。</p>
+<p>在1508名罹患<ahref="https://github.com/eizauy3553/djy/blob/master/gb/tag/%E4%B9%B3%E7%99%8C.md#1">乳癌</a>的妇女和1556名健康的妇女中，南卡罗来纳大学(University of South Carolina)的苏珊?斯特克 (Susan E. Steck) 博士和同事比较这些妇女过去和最近对肉类食用的多寡。结果发现停经妇女在过去三分之二的岁月中，食用烟熏红肉或<ahref="https://github.com/eizauy3553/djy/blob/master/gb/tag/%E7%83%A7%E7%83%A4.md#1">烧烤</a>红肉每周超过一次者比起每周一次以下的人罹患乳癌概率增加47%。再者，食用大量的烧烤或烟熏肉品而甚少食用水果和蔬菜，比如每天不到五份（five servings)，的妇女罹患乳癌的风险会增加到74%。</p>
 <p>报告中还提到，肉类在高温下烹饪会产生多环芳香碳氢化合物(Polycyclic aromatic hydrocarbons, PAH)和杂环胺化合物(heterocyclic amines, HA)等致癌物质。烧烤肉和烟熏肉中都含有多环芳香碳氢化合物，而油炸的肉和烧烤的肉中含有特别高的杂环胺化合物。</p>
 <p>华人食物通常不离煎、炸、烤，2005年新加坡国立大学研究人员收集新加坡最常吃的25种肉类进行实验，结果发现烧肉的HA含量最高，每公克含有6.77毫微克的HA；而其他烹调方式的肉类之HA分别为：炸猪排（3.83毫微克）、炸鸡（2.49毫微克）、鸡排（2.15毫微克）和煎鱼（1.07毫微克）。</p>
 <p>针对平时喜欢吃烧烤和烟熏肉的妇女来说，南卡罗来纳大学的这份报告提醒大家最好也能同时摄取足够的水果和蔬菜以降低罹患乳癌的风险。它与目前癌症预防手册也相吻合，就是建议一般大众多摄取植物性食物，并减少食用加工过或红的肉类食物。 </p>
@@ -25,41 +26,41 @@
 
 
 <strong>相关新闻：</strong>
-<li><a href="https://github.com/cdbkmw3667/djy/blob/master/gb/21/9/9/n13221130.md#1">劳动节长周末11名温哥华警官遇袭受伤</a></li>
-<li><a href="https://github.com/cdbkmw3667/djy/blob/master/gb/21/9/9/n13220674.md#1">周末市中心拍电视剧  Burrard桥将锁路</a></li>
-<li><a href="https://github.com/cdbkmw3667/djy/blob/master/gb/21/9/9/n13220614.md#1">快餐厅美食广场就餐无需出示疫苗卡</a></li>
-<li><a href="https://github.com/cdbkmw3667/djy/blob/master/gb/21/9/9/n13220595.md#1">9月8日：新增814宗确诊</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/7/4/29/n1694212.md#1">创意宣导防治乳癌、子宫颈癌</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/7/6/14/n1744290.md#1">台卫署公布十大死因 癌症蝉联榜首</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/7/6/15/n1744324.md#1">芭莉丝拘留所就医引质疑　警方忙移送回监狱</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/7/6/15/n1745136.md#1">大连旅行团南投车祸 最后一名伤患返中国</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/7/6/15/n1745464.md#1">1199工会提出“保护纽约”计划</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/7/6/15/n1745465.md#1">抗肝癌新药！有效降低复发率</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/7/6/15/n1745483.md#1">台立院三读  室内公共场所全禁烟但设排除条款</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/7/6/16/n1746053.md#1">台大医院112周年院庆  病友走秀展新生</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/7/6/16/n1746270.md#1">澳私人医疗保险公司上市 受保者或受影响</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/7/6/16/n1746362.md#1">防乳癌每周要吃两次鱼</a></li>
 <hr>
 
 
 <strong>编辑推荐：</strong>
-<li><a href="https://github.com/upjkzu3674/djy/blob/master/gb/16/3/16/n4663449.md?dfh#1" target="_blank">警卫目击活摘器官</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/19/9/22/n11539349.md#1" target="_blank">共产暴政录：从毛泽东诗词谈中共卖国</a></li><li><a href="https://github.com/upjkzu3674/djy/blob/master/gb/12/12/28/n3763495.md#1" target="_blank">洪愿：告诉你真实的法轮功（一）</a></li>
+<li><a href="https://github.com/upjkzu3674/djy/blob/master/gb/17/5/26/n9191512.md?dfh#1" target="_blank">亿万人与东方一本奇书</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/19/4/18/n11196004.md#1" target="_blank">【征文】张东园：中国国学大师的血泪遭遇(1)</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/19/3/17/n11119803.md#1" target="_blank">见证奇迹 一位越南女子修炼法轮功的故事</a></li>
 <hr>
 
 <strong>热门新闻：</strong>
-<li><a href="https://github.com/uimzxm315/djy/blob/master/gb/21/9/16/n13238162.md#1">美国男子自称遭外星人多次绑架和植入晶片</a></li>
-<li><a href="https://github.com/uimzxm315/djy/blob/master/gb/21/9/15/n13237143.md#1">【百年真相】最惨海归博士 萧光琰文革遭灭门</a></li>
-<li><a href="https://github.com/uimzxm315/djy/blob/master/gb/21/9/6/n13213473.md#1">古今两个中秋礼俗各异 古代不送月饼 月饼何时普及？</a></li>
-<li><a href="https://github.com/uimzxm315/djy/blob/master/gb/21/9/14/n13233994.md#1">【未解之谜】前世情未了 今生续前缘</a></li>
-<li><a href="https://github.com/uimzxm315/djy/blob/master/gb/21/9/14/n13234196.md#1">【未解之谜】偿还业债 转世变成了动物</a></li>
-<li><a href="https://github.com/uimzxm315/djy/blob/master/gb/21/9/17/n13242254.md#1">【时事军事】日本三款导弹 对准中共海军</a></li>
-<li><a href="https://github.com/uimzxm315/djy/blob/master/gb/21/9/20/n13247529.md#1">【新闻大家谈】专访廖天琪：六四和中共决裂</a></li>
-<li><a href="https://github.com/uimzxm315/djy/blob/master/gb/21/9/20/n13247593.md#1">【微视频】美英澳同盟共建核潜艇 台湾防御增强</a></li>
-<li><a href="https://github.com/uimzxm315/djy/blob/master/gb/21/9/18/n13242870.md#1">消息：李嘉诚再次出售大陆地产项目</a></li>
-<li><a href="https://github.com/uimzxm315/djy/blob/master/gb/21/9/17/n13240636.md#1">中共何以令一位精英人士流亡美国（1）</a></li>
-<li><a href="https://github.com/uimzxm315/djy/blob/master/gb/21/9/18/n13242696.md#1">研究：降低蛋白质出错有助延长寿命</a></li>
-<li><a href="https://github.com/uimzxm315/djy/blob/master/gb/21/9/19/n13245464.md#1">李嘉欣富豪丈夫似一夜变老 被拍拄拐杖蹒跚求医</a></li>
-<li><a href="https://github.com/uimzxm315/djy/blob/master/gb/21/9/17/n13242350.md#1">范冰冰40岁生日 罕见晒与家人合照</a></li>
-<li><a href="https://github.com/uimzxm315/djy/blob/master/gb/21/9/17/n13242592.md#1">杨紫琼晒《尚气》花絮照 大赞梁朝伟和元华</a></li>
-<li><a href="https://github.com/uimzxm315/djy/blob/master/gb/21/9/19/n13245793.md#1">被传怀上第三胎 孙俪工作室幽默回应</a></li>
-<li><a href="https://github.com/uimzxm315/djy/blob/master/gb/21/9/20/n13245894.md#1">JINJIN“阴转阳”确诊染疫 ASTRO两成员隔离</a></li>
-<li><a href="https://github.com/uimzxm315/djy/blob/master/gb/21/9/17/n13242435.md#1">以色列：打疫苗突破感染风险 是自然感染13倍</a></li>
-<li><a href="https://github.com/uimzxm315/djy/blob/master/gb/21/9/19/n13244539.md#1">巨型石斑鱼一口咬下鲨鱼 美国船长看傻眼</a></li>
-<li><a href="https://github.com/uimzxm315/djy/blob/master/gb/21/9/17/n13241301.md#1">冬瓜是“减肥瓜” 这样吃不花大钱就变瘦</a></li>
-<li><a href="https://github.com/uimzxm315/djy/blob/master/gb/21/9/13/n13229960.md#1">4种柚子营养、热量谁较高？营养师1招控份量</a></li>
-<li><a href="https://github.com/uimzxm315/djy/blob/master/gb/21/9/19/n13244842.md#1">美国女子死亡45分钟 在女儿产子前活了过来</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/20/4/9/n12017675.md#1">中共内外交困 前人大教授：王沪宁把习吹晕了</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/20/4/9/n12017276.md#1">塞尔维亚总统吻五星旗后 儿子确诊患肺炎</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/20/4/9/n12018161.md#1">川普问“哪来的” 上海党媒记者称“来自台湾”</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/20/4/10/n12018467.md#1">【拍案惊奇】北京连发地震是人为？山东罕见雪</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/20/4/10/n12020333.md#1">欧盟公布台湾口罩抵达画面 中华民国国旗登官网</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/20/4/9/n12017835.md#1">众艺人呛谭德塞抹黑台湾 炎亚纶：闭上你的嘴</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/20/4/9/n12018357.md#1">美国娱乐圈遭重创 一周内九位明星染疫过世</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/20/4/8/n12015123.md#1">妻预先考虑后事 汤姆·汉克斯被要求做两件事</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/20/4/9/n12015926.md#1">胡瓜长年捐款做公益 不忘赞助辛龙女儿学费</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/20/4/9/n12016763.md#1">李明依罹甲状腺癌 动刀切除恶性肿瘤</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/20/4/8/n12012857.md#1">口罩戴久耳朵痛？ 加拿大男童的护耳器有解</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/20/3/13/n11938424.md#1">强大善能量 猛兽蝗虫神奇证验</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/20/4/8/n12014127.md#1">工匠未见过佛 如何能雕刻出佛之庄严宝像</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/20/4/6/n12007048.md#1">未来的人们都将在善恶间抉择——1950年宋美龄《在纽约向全美广播演说》</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/20/4/7/n12011418.md#1">【历史上的瘟疫】夺走两位君王性命的大瘟疫</a></li>
 <hr>
 
-<strong>本文转自<a href="https://www.epochtimes.com">大纪元</a>（国内需用<a href="https://github.com/pybnyd3634/www/blob/master/README.md#8">翻墙软件</a>才能访问）</strong><p>下载<a href="https://github.com/pybnyd3634/www/blob/master/README.md#8">翻墙软件</a>浏览原文：<a href="https://www.epochtimes.com/gb/7/6/17/n1746745.htm">烧烤或烟熏增乳癌风险 如何烧烤最合适</a></p><hr>
+<strong>本文转自<a href="https://www.epochtimes.com">大纪元</a>（国内需用<a href="https://github.com/eizauy3553/www/blob/master/README.md#8">翻墙软件</a>才能访问）</strong><p>下载<a href="https://github.com/eizauy3553/www/blob/master/README.md#8">翻墙软件</a>浏览原文：<a href="https://www.epochtimes.com/gb/7/6/17/n1746745.htm">烧烤或烟熏增乳癌风险 如何烧烤最合适</a></p><hr>
 
-<strong>手机上长按并复制下面二维码分享本文章：</strong><br><br><img src="https://chart.apis.google.com/chart?cht=qr&chs=240x240&choe=UTF-8&chld=M|2&chl=https://github.com/pybnyd3634/djy/blob/master/gb/7/6/17/n1746745.md%231" title="分享本文章"></td><td VALIGN=TOP><a href="https://github.com/pybnyd3634/djy/blob/master/gb/16/1/21/n4622075.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/pybnyd3634/djy/master/gb/300/wei-f1.jpg" title="中共的伪火骗局"  alt="中共的伪火骗局"></a><br><a href="https://github.com/pybnyd3634/www/blob/master/README.md?dfh#9" target="_blank"><img src="https://raw.githubusercontent.com/pybnyd3634/djy/master/gb/300/yong-h.jpg" title="永恒的见证"  alt="永恒的见证"></a><br><a href="https://github.com/pybnyd3634/djy/blob/master/gb/13/9/29/n3974789.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/pybnyd3634/djy/master/gb/300/shang-lnz.jpg" title="善良女子被中共投男牢"  alt="善良女子被中共投男牢"></a><br><a href="https://github.com/pybnyd3634/djy/blob/master/gb/16/3/16/n4663449.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/pybnyd3634/djy/master/gb/300/huo-z3.jpg" title="警卫目击活摘器官"  alt="警卫目击活摘器官"></a><br><a href="https://github.com/pybnyd3634/djy/blob/master/gb/16/8/7/n8177641.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/pybnyd3634/djy/master/gb/300/huo-z4.jpg" title="证人描述活摘恐怖"  alt="证人描述活摘恐怖"></a><br><a href="https://github.com/pybnyd3634/djy/blob/master/gb/10/4/19/n2881569.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/pybnyd3634/djy/master/gb/300/huo-z1.jpg" title="揭开活摘器官黑幕"  alt="揭开活摘器官黑幕"></a><br><a href="https://github.com/pybnyd3634/djy/blob/master/gb/10/11/7/n3077476.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/pybnyd3634/djy/master/gb/300/ma-ks.jpg" title="马克思的成魔之路"  alt="马克思的成魔之路"></a><br><a href="https://github.com/pybnyd3634/djy/blob/master/gb/14/6/9/n4173977.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/pybnyd3634/djy/master/gb/300/chang-zs.jpg" title="藏字石 蕴天机"  alt="藏字石 蕴天机"></a><br><a href="https://github.com/pybnyd3634/djy/blob/master/gb/18/5/10/n10381511.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/pybnyd3634/djy/master/gb/300/st1.jpg" title="关注三亿人三退"  alt="关注三亿人三退"></a><br><a href="https://github.com/pybnyd3634/djy/blob/master/gb/18/3/21/n10237682.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/pybnyd3634/djy/master/gb/300/jie-t.jpg" title="解体中共复兴中华"  alt="解体中共复兴中华"></a><br><a href="https://github.com/pybnyd3634/djy/blob/master/gb/9/2/9/n2422991.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/pybnyd3634/djy/master/gb/300/gao-zs.jpg" title="中共迫害良心律师"  alt="中共迫害良心律师"></a><br><a href="https://github.com/pybnyd3634/djy/blob/master/gb/18/12/9/n10900044.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/pybnyd3634/djy/master/gb/300/sj1.jpg" title="三百多万人举报江泽民"  alt="三百多万人举报江泽民"></a><br><a href="https://github.com/pybnyd3634/djy/blob/master/gb/18/8/28/n10672014.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/pybnyd3634/djy/master/gb/300/sj2.jpg" title="这些官员为何起诉江泽民"  alt="这些官员为何起诉江泽民"></a><br><a href="https://github.com/pybnyd3634/djy/blob/master/gb/8/12/18/n2367165.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/pybnyd3634/djy/master/gb/300/liangan.jpg" title="海峡两岸的强烈对比"  alt="海峡两岸的强烈对比"></a><br><a href="https://github.com/pybnyd3634/djy/blob/master/gb/15/12/10/n4593139.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/pybnyd3634/djy/master/gb/300/jia-ndzl.jpg" title="加拿大总理的贺信"  alt="加拿大总理的贺信"></a><br><a href="https://github.com/pybnyd3634/djy/blob/master/gb/11/6/17/n3289382.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/pybnyd3634/djy/master/gb/300/xiao-wd.jpg" title="探寻真相兼听则明"  alt="探寻真相兼听则明"></a><br><a href="https://github.com/pybnyd3634/djy/blob/master/gb/18/10/27/n10812623.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/pybnyd3634/djy/master/gb/300/yindu.jpg" title="印度媒体报道东方"  alt="印度媒体报道东方"></a><br><a href="https://github.com/pybnyd3634/djy/blob/master/gb/18/6/9/n10469652.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/pybnyd3634/djy/master/gb/300/xie-j.jpg" title="不一样的海外校园"  alt="不一样的海外校园"></a><br><a href="https://github.com/pybnyd3634/djy/blob/master/gb/7/4/5/n1669415.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/pybnyd3634/djy/master/gb/300/li-up.jpg" title="从大师到徒弟的传奇"  alt="从大师到徒弟的传奇"></a><br><a href="https://github.com/pybnyd3634/djy/blob/master/gb/17/5/26/n9191512.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/pybnyd3634/djy/master/gb/300/zfl2.jpg" title="亿万人与东方一本奇书"  alt="亿万人与东方一本奇书"></a><br><a href="https://github.com/pybnyd3634/djy/blob/master/gb/13/11/27/n4020290.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/pybnyd3634/djy/master/gb/300/zhen-h.jpg" title="大陆见不到的震撼场面"  alt="大陆见不到的震撼场面"></a><br><a href="https://github.com/pybnyd3634/djy/blob/master/gb/15/7/17/n4482910.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/pybnyd3634/djy/master/gb/300/dalu-sk.jpg" title="人心向善 大陆当初盛况"  alt="人心向善 大陆当初盛况"></a><br><a href="https://github.com/pybnyd3634/djy/blob/master/gb/19/1/5/n10955468.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/pybnyd3634/djy/master/gb/300/zfl1.jpg" title="追寻真理 这书讲什么"  alt="追寻真理 这书讲什么"></a><br><a href="https://github.com/pybnyd3634/www/blob/master/README.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/pybnyd3634/djy/master/gb/300/fq1.jpg" title="下载免费翻墙软件"  alt="下载免费翻墙软件"></a><br></td></tr></table>
+<strong>手机上长按并复制下面二维码分享本文章：</strong><br><br><img src="https://chart.apis.google.com/chart?cht=qr&chs=240x240&choe=UTF-8&chld=M|2&chl=https://github.com/eizauy3553/djy/blob/master/gb/7/6/17/n1746745.md%231" title="分享本文章"></td><td VALIGN=TOP><a href="https://github.com/eizauy3553/djy/blob/master/gb/16/1/21/n4622075.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/wei-f1.jpg" title="中共的伪火骗局"  alt="中共的伪火骗局"></a><br><a href="https://github.com/eizauy3553/www/blob/master/README.md?dfh#9" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/yong-h.jpg" title="永恒的见证"  alt="永恒的见证"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/13/9/29/n3974789.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/shang-lnz.jpg" title="善良女子被中共投男牢"  alt="善良女子被中共投男牢"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/16/3/16/n4663449.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/huo-z3.jpg" title="警卫目击活摘器官"  alt="警卫目击活摘器官"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/16/8/7/n8177641.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/huo-z4.jpg" title="证人描述活摘恐怖"  alt="证人描述活摘恐怖"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/10/4/19/n2881569.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/huo-z1.jpg" title="揭开活摘器官黑幕"  alt="揭开活摘器官黑幕"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/10/11/7/n3077476.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/ma-ks.jpg" title="马克思的成魔之路"  alt="马克思的成魔之路"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/14/6/9/n4173977.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/chang-zs.jpg" title="藏字石 蕴天机"  alt="藏字石 蕴天机"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/18/5/10/n10381511.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/st1.jpg" title="关注三亿人三退"  alt="关注三亿人三退"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/18/3/21/n10237682.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/jie-t.jpg" title="解体中共复兴中华"  alt="解体中共复兴中华"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/9/2/9/n2422991.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/gao-zs.jpg" title="中共迫害良心律师"  alt="中共迫害良心律师"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/18/12/9/n10900044.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/sj1.jpg" title="三百多万人举报江泽民"  alt="三百多万人举报江泽民"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/18/8/28/n10672014.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/sj2.jpg" title="这些官员为何起诉江泽民"  alt="这些官员为何起诉江泽民"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/8/12/18/n2367165.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/liangan.jpg" title="海峡两岸的强烈对比"  alt="海峡两岸的强烈对比"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/15/12/10/n4593139.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/jia-ndzl.jpg" title="加拿大总理的贺信"  alt="加拿大总理的贺信"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/11/6/17/n3289382.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/xiao-wd.jpg" title="探寻真相兼听则明"  alt="探寻真相兼听则明"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/18/10/27/n10812623.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/yindu.jpg" title="印度媒体报道东方"  alt="印度媒体报道东方"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/18/6/9/n10469652.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/xie-j.jpg" title="不一样的海外校园"  alt="不一样的海外校园"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/7/4/5/n1669415.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/li-up.jpg" title="从大师到徒弟的传奇"  alt="从大师到徒弟的传奇"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/17/5/26/n9191512.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/zfl2.jpg" title="亿万人与东方一本奇书"  alt="亿万人与东方一本奇书"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/13/11/27/n4020290.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/zhen-h.jpg" title="大陆见不到的震撼场面"  alt="大陆见不到的震撼场面"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/15/7/17/n4482910.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/dalu-sk.jpg" title="人心向善 大陆当初盛况"  alt="人心向善 大陆当初盛况"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/19/1/5/n10955468.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/zfl1.jpg" title="追寻真理 这书讲什么"  alt="追寻真理 这书讲什么"></a><br><a href="https://github.com/eizauy3553/www/blob/master/README.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/fq1.jpg" title="下载免费翻墙软件"  alt="下载免费翻墙软件"></a><br></td></tr></table>
